# autotools_init_setup

./: readme.md
type1/: Makefile.am  configure.ac  readme.md
type1/client/: Makefile.am  client.c
type1/lib/: Makefile.am  lib.c  lib.h
type1/server/: Makefile.am  server.c
type2/: .gitignore  configure.ac  readme.md
type2/src/: Makefile.am  lib.c  lib.h  main.c
